# flickjs

./: .gitignore  Cargo.toml  README.md  USAGE.md  flick.json  package-lock.json  package.json  pnpm-lock.yaml  semantic-policy.md  tests.md  todo.md  vercel.json
.github/workflows/: ci.yml  docs.yml
src/: cli.rs  lib.rs  main.rs
src/rules/: dead_code.rs  english.rs  english_llm.rs  mod.rs  no_console.rs  no_empty_catch.rs  no_explicit_any.rs  no_missing_return.rs  no_unsafe_optional_access.rs  no_unused_vars.rs  policy.rs  prefer_const.rs  unreachable_code.rs
src/rules/policy/: ast.rs  comments.rs  file.rs  imports.rs  naming.rs  semantic.rs
zarc-npm/: package.json
