[package]
name = "zarc"
version = "0.1.0"
edition = "2021"
description = "The JavaScript Static Analysis Engine"
license = "MIT"
repository = "https://github.com/yourusername/zarc"
keywords = ["linter", "typescript", "javascript", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "zarc"
path = "src/main.rs"

[dependencies]
oxc_parser = "0.122"
oxc_ast = "0.122"
oxc_span = "0.122"
oxc_allocator = "0.122"
oxc_semantic = "0.122"
oxc_traverse = "0.122"
oxc_syntax = "0.122"
oxc_diagnostics = "0.122"

clap = { version = "4", features = ["derive"] }
rayon = "1.10"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
colored = "2"
miette = { version = "7", features = ["fancy"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
